<resources>
    <string name="app_name">dennispersaudinventoryapplication</string>
    <string name="toast_loginSuccess">Logging in…</string>
    <string name="toast_loginFailed">Login failed.</string>
    <string name="toast_accountExists">Account already exists.</string>
    <string name="toast_createAccountSuccess">New account created.</string>
    <string name="toast_createAccountFailed">Create account failed.</string>
    <string name="hint_usernameInput">Username</string>
    <string name="hint_passwordInput">Password</string>
    <string name="text_loginButton">Login</string>
    <string name="text_createAccountButton">Create Account</string>
    <string name="add_item_button">Add Item Button</string>
    <string name="notifications_switch">Notifications</string>
</resources>